# llm-legal-retrieval

./: .gitignore  DIARY.md  README.md  baseline.ipynb  insights.md  pyproject.toml
diary/: 2026-03-01.md  2026-03-03.md  2026-03-07.md  2026-03-12.md  2026-03-31.md
notebooks/: 2026-03-03.ipynb  2026-03-07-nllb.ipynb  2026-03-08-adaptive-topk.ipynb  2026-03-12-bertopic.ipynb  2026-03-13-law-text-analysis.ipynb  2026-03-14-domain-finetuning.ipynb  2026-03-15-build-kg.ipynb  2026-03-15-e5-finetuned-submission.ipynb  2026-03-16-domain-taxonomy.ipynb  2026-03-17-sr-taxonomy.ipynb  EDA_general.ipynb  reranker_exploration.ipynb  submission.ipynb
scripts/: build_kg.py
src/legal_kg/: __init__.py  extractor.py  judge.py  linker.py  models.py  retriever.py  store.py
