[project]
name = "llm-legal-retrieval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.1.0",
    "anthropic>=0.84.0",
    "bertopic>=0.17.4",
    "datasets>=4.7.0",
    "hdbscan>=0.8.41",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "kaggle>=2.0.0",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.3",
    "torch>=2.10.0",
    "transformers[torch]>=5.2.0",
    "umap-learn>=0.5.11",
]

[tool.ruff]
line-length = 100

[tool.flake8]
max-line-length = 100
